// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the OrganizationDetailContacts component. If input name is empty shouldn't add pill after clicking assign 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    data-testid="organization-contacts"
  >
    <div
      class="mt-12"
      data-testid="editable-section"
    >
      <div
        class="flex justify-between items-center mb-3"
      >
        <div
          class="card-title text-dial-sapphire"
        >
          Contacts
        </div>
        <div
          class="gap-3"
        />
      </div>
      <div
        class="bg-edit p-6"
      >
        <form>
          <p
            class="card-title text-dial-stratos mb-3"
          >
            Assign
             
            Contacts
          </p>
          <div
            class="flex flex-col md:flex-row justify-between"
          >
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Name
              </p>
              <input
                class="validation-error w-full"
                data-testid="name-input"
                name="name"
                type="text"
                value=""
              />
              <p
                class="text-sm text-validation-error"
              >
                This field is required
              </p>
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Email
              </p>
              <input
                class="validation-error w-full"
                data-testid="email-input"
                name="email"
                type="text"
                value=""
              />
              <p
                class="text-sm text-validation-error"
              >
                This field is required
              </p>
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p>
                Title
              </p>
              <input
                class="w-full"
                data-testid="title-input"
                name="title"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex md:block justify-center md:justify-end ml-4 mb-2 mt-8 text-xl"
            >
              <button
                class="submit-button"
                data-testid="assign-button"
                type="submit"
              >
                Assign
              </button>
            </label>
          </div>
          <div
            class="flex flex-wrap gap-3 mt-5 mx-4"
          />
        </form>
        <div
          class="flex justify-end mt-8 gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            disabled=""
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the OrganizationDetailContacts component. Should add pill after click assign button if input name has value 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    data-testid="organization-contacts"
  >
    <div
      class="mt-12"
      data-testid="editable-section"
    >
      <div
        class="flex justify-between items-center mb-3"
      >
        <div
          class="card-title text-dial-sapphire"
        >
          Contacts
        </div>
        <div
          class="gap-3"
        />
      </div>
      <div
        class="bg-edit p-6"
      >
        <form>
          <p
            class="card-title text-dial-stratos mb-3"
          >
            Assign
             
            Contacts
          </p>
          <div
            class="flex flex-col md:flex-row justify-between"
          >
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Name
              </p>
              <input
                class="w-full"
                data-testid="name-input"
                name="name"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Email
              </p>
              <input
                class="w-full"
                data-testid="email-input"
                name="email"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p>
                Title
              </p>
              <input
                class="w-full"
                data-testid="title-input"
                name="title"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex md:block justify-center md:justify-end ml-4 mb-2 mt-8 text-xl"
            >
              <button
                class="submit-button"
                data-testid="assign-button"
                type="submit"
              >
                Assign
              </button>
            </label>
          </div>
          <div
            class="flex flex-wrap gap-3 mt-5 mx-4"
          >
            <div
              class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
              data-testid="pill"
            >
              Name: Test Test
              <svg
                class="cursor-pointer opacity-50"
                data-testid="remove-button"
                fill="currentColor"
                height="1.5em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                />
              </svg>
            </div>
          </div>
        </form>
        <div
          class="flex justify-end mt-8 gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the OrganizationDetailContacts component. Should assign button have text "Assign" 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    data-testid="organization-contacts"
  >
    <div
      class="mt-12"
      data-testid="editable-section"
    >
      <div
        class="flex justify-between items-center mb-3"
      >
        <div
          class="card-title text-dial-sapphire"
        >
          Contacts
        </div>
        <div
          class="gap-3"
        />
      </div>
      <div
        class="bg-edit p-6"
      >
        <form>
          <p
            class="card-title text-dial-stratos mb-3"
          >
            Assign
             
            Contacts
          </p>
          <div
            class="flex flex-col md:flex-row justify-between"
          >
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Name
              </p>
              <input
                class="w-full"
                data-testid="name-input"
                name="name"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Email
              </p>
              <input
                class="w-full"
                data-testid="email-input"
                name="email"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p>
                Title
              </p>
              <input
                class="w-full"
                data-testid="title-input"
                name="title"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex md:block justify-center md:justify-end ml-4 mb-2 mt-8 text-xl"
            >
              <button
                class="submit-button"
                data-testid="assign-button"
                type="submit"
              >
                Assign
              </button>
            </label>
          </div>
          <div
            class="flex flex-wrap gap-3 mt-5 mx-4"
          />
        </form>
        <div
          class="flex justify-end mt-8 gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            disabled=""
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the OrganizationDetailContacts component. Should clear inputs after click assign button 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    data-testid="organization-contacts"
  >
    <div
      class="mt-12"
      data-testid="editable-section"
    >
      <div
        class="flex justify-between items-center mb-3"
      >
        <div
          class="card-title text-dial-sapphire"
        >
          Contacts
        </div>
        <div
          class="gap-3"
        />
      </div>
      <div
        class="bg-edit p-6"
      >
        <form>
          <p
            class="card-title text-dial-stratos mb-3"
          >
            Assign
             
            Contacts
          </p>
          <div
            class="flex flex-col md:flex-row justify-between"
          >
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Name
              </p>
              <input
                class="w-full"
                data-testid="name-input"
                name="name"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Email
              </p>
              <input
                class="w-full"
                data-testid="email-input"
                name="email"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p>
                Title
              </p>
              <input
                class="w-full"
                data-testid="title-input"
                name="title"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex md:block justify-center md:justify-end ml-4 mb-2 mt-8 text-xl"
            >
              <button
                class="submit-button"
                data-testid="assign-button"
                type="submit"
              >
                Assign
              </button>
            </label>
          </div>
          <div
            class="flex flex-wrap gap-3 mt-5 mx-4"
          >
            <div
              class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
              data-testid="pill"
            >
              Name: Test Test
              <svg
                class="cursor-pointer opacity-50"
                data-testid="remove-button"
                fill="currentColor"
                height="1.5em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                />
              </svg>
            </div>
          </div>
        </form>
        <div
          class="flex justify-end mt-8 gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the OrganizationDetailContacts component. Should remove pill after click close icon on pill 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    data-testid="organization-contacts"
  >
    <div
      class="mt-12"
      data-testid="editable-section"
    >
      <div
        class="flex justify-between items-center mb-3"
      >
        <div
          class="card-title text-dial-sapphire"
        >
          Contacts
        </div>
        <div
          class="gap-3"
        />
      </div>
      <div
        class="bg-edit p-6"
      >
        <form>
          <p
            class="card-title text-dial-stratos mb-3"
          >
            Assign
             
            Contacts
          </p>
          <div
            class="flex flex-col md:flex-row justify-between"
          >
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Name
              </p>
              <input
                class="w-full"
                data-testid="name-input"
                name="name"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p
                class="required-field"
              >
                Email
              </p>
              <input
                class="w-full"
                data-testid="email-input"
                name="email"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex flex-col gap-y-2 mb-2 mx-4 w-full"
            >
              <p>
                Title
              </p>
              <input
                class="w-full"
                data-testid="title-input"
                name="title"
                type="text"
                value=""
              />
            </label>
            <label
              class="flex md:block justify-center md:justify-end ml-4 mb-2 mt-8 text-xl"
            >
              <button
                class="submit-button"
                data-testid="assign-button"
                type="submit"
              >
                Assign
              </button>
            </label>
          </div>
          <div
            class="flex flex-wrap gap-3 mt-5 mx-4"
          />
        </form>
        <div
          class="flex justify-end mt-8 gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
